syntax = "proto3";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "org.av360.maverick.eventdispatcher.shared.grpc";
option java_outer_classname = "SubscribingProto";

service SubscriptionService {
  rpc NewSubscription (SubscriptionMessage) returns (SubscriptionId) {
  }

  rpc SyncSubscriptions (stream SubscriptionMessage) returns (stream SubscriptionId) {
  }

  rpc DeleteSubscription (SubscriptionId) returns (SubscriptionId) {
  }

  rpc DeleteSubscriptions (stream SubscriptionId) returns (stream SubscriptionId) {
  }
}

message SubscriptionId {
  int64 id = 1;
}

message SubscriptionMessage {
  int64 id = 1;
  google.protobuf.Timestamp createdAt = 2;
  string subscriberUri = 3;
  map<string, string> filters = 4;
}